--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       #navbar{
         margin-top: 10px;
       }
+      nav{
+        display: flex;
+        flex-wrap: nowrap;
+      }
 
       #webpage-content{
       margin-top: 20px;
@@ -43,6 +47,15 @@
       #contact{
         margin-top: 70px;
       }
+
+      a {
+        color:  rgb(4, 158, 4);
+        margin-right: 40px;
+      }
+      #lich{
+        color: cadetblue;
+      }
+
     </style>
   </head>
   <body>
@@ -66,7 +79,7 @@
         <p style="text-align: center;">This is a sample paragraph describing the content of the webpage, It explains the purpose of the page <br> and provide some basic information about what users can expect to find.</p>
       </div>
 
-        <a href="https://www.techyjaunt.com/" target="_blank">Visit TechyJaunt</a>
+        <a href="https://www.techyjaunt.com/" target="_blank" id="lich">Visit TechyJaunt</a>
 
       <div id="webpage-con">
         <h2>Webpage Contents</h2>
